// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json/multiple-symbol/multiple-output/output-descriptor/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": Array [
            "foo.filename.schema.json",
            Object {
              "filename": "foo.default.schema.json",
            },
            Object {
              "filename": "foo.custom.schema.json",
              "format": "json",
              "indent": "tab",
            },
          ],
          "symbol": "Foo",
        },
        Object {
          "output": Array [
            Object {
              "filename": "bar.4.schema.json",
              "format": "json",
              "indent": 4,
            },
          ],
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`json/multiple-symbol/multiple-output/output-filename/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": Array [
            "abc.foo.schema.json",
            "def.foo.schema.json",
            "ghi.foo.schema.json",
          ],
          "symbol": "Foo",
        },
        Object {
          "output": Array [
            "abc.bar.schema.json",
            "def.bar.schema.json",
            "ghi.bar.schema.json",
          ],
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`json/multiple-symbol/single-output/output-descriptor/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": Object {
            "filename": "foo.schema.json",
            "format": "json",
            "indent": "tab",
          },
          "symbol": "Foo",
        },
        Object {
          "output": Object {
            "filename": "bar.schema.json",
            "format": "json",
            "indent": "tab",
          },
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`json/multiple-symbol/single-output/output-filename/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": "foo.schema.json",
          "symbol": "Foo",
        },
        Object {
          "output": "bar.schema.json",
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`json/single-symbol/multiple-output/output-descriptor/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": Array [
        "non-descriptor.schema.json",
        Object {
          "filename": "default-descriptor.schema.json",
        },
        Object {
          "filename": "custom-descriptor.schema.json",
          "format": "json",
          "indent": "tab",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`json/single-symbol/multiple-output/output-filename/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": Array [
        "abc.schema.json",
        "def.schema.json",
        "ghi.schema.json",
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`json/single-symbol/single-output/output-descriptor/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": Object {
        "filename": "output.schema.json",
        "format": "json",
        "indent": "tab",
      },
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`json/single-symbol/single-output/output-filename/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": "output.schema.json",
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`yaml/multiple-symbol/multiple-output/output-descriptor/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": Array [
            "foo.filename.schema.json",
            Object {
              "filename": "foo.default.schema.json",
            },
            Object {
              "filename": "foo.custom.schema.json",
              "format": "json",
              "indent": "tab",
            },
          ],
          "symbol": "Foo",
        },
        Object {
          "output": Array [
            Object {
              "filename": "bar.4.schema.json",
              "format": "json",
              "indent": 4,
            },
          ],
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`yaml/multiple-symbol/multiple-output/output-filename/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": Array [
            "abc.foo.schema.json",
            "def.foo.schema.json",
            "ghi.foo.schema.json",
          ],
          "symbol": "Foo",
        },
        Object {
          "output": Array [
            "abc.bar.schema.json",
            "def.bar.schema.json",
            "ghi.bar.schema.json",
          ],
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`yaml/multiple-symbol/single-output/output-descriptor/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": Object {
            "filename": "foo.schema.json",
            "format": "json",
            "indent": "tab",
          },
          "symbol": "Foo",
        },
        Object {
          "output": Object {
            "filename": "bar.schema.json",
            "format": "json",
            "indent": "tab",
          },
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`yaml/multiple-symbol/single-output/output-filename/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "list": Array [
        Object {
          "output": "foo.schema.json",
          "symbol": "Foo",
        },
        Object {
          "output": "bar.schema.json",
          "symbol": "Bar",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
    },
  },
}
`;

exports[`yaml/single-symbol/multiple-output/output-descriptor/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": Array [
        "non-descriptor.schema.json",
        Object {
          "filename": "default-descriptor.schema.json",
        },
        Object {
          "filename": "custom-descriptor.schema.json",
          "format": "json",
          "indent": "tab",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`yaml/single-symbol/multiple-output/output-filename/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": Array [
        "abc.schema.json",
        "def.schema.json",
        "ghi.schema.json",
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`yaml/single-symbol/single-output/output-descriptor/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": Object {
        "filename": "output.schema.json",
        "format": "json",
        "indent": "tab",
      },
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`yaml/single-symbol/single-output/output-filename/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.abc.compilerOptions) filename": "abc.yaml",
        "(extensions.abc.compilerOptions) format": "YAML",
        "(extensions.abc.compilerOptions) property": "compilerOptions",
        "(extensions.def-json.compilerOptions) filename": "def-json",
        "(extensions.def-json.compilerOptions) format": "JSON",
        "(extensions.def-json.compilerOptions) property": "compilerOptions",
        "(extensions.def-yaml.compilerOptions) filename": "def-yaml",
        "(extensions.def-yaml.compilerOptions) format": "YAML",
        "(extensions.def-yaml.compilerOptions) property": "compilerOptions",
      },
      "output": "output.schema.json",
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.abc.schemaSettings) filename": "abc.yaml",
        "(extensions.abc.schemaSettings) format": "YAML",
        "(extensions.abc.schemaSettings) property": "schemaSettings",
        "(extensions.def-json.schemaSettings) filename": "def-json",
        "(extensions.def-json.schemaSettings) format": "JSON",
        "(extensions.def-json.schemaSettings) property": "schemaSettings",
        "(extensions.def-yaml.schemaSettings) filename": "def-yaml",
        "(extensions.def-yaml.schemaSettings) format": "YAML",
        "(extensions.def-yaml.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;
